src/objects/Other_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Interest_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Interest Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Declining Balance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due Date of transaction, this is useful for billing transactions</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Loan_Payment__c</fullName>
        <label>Frequency of Loan Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Only_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Other Loan Transactions</relationshipLabel>
        <relationshipName>Other_Loan_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passed_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No of installments passed</description>
        <label>Passed Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Off_Date__c</fullName>
        <description>Date for the pay off quote</description>
        <label>Pay Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_Remaining__c</fullName>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Extension_Days__c</fullName>
        <description>Days by which repayments are extended</description>
        <inlineHelpText>Days by which repayments are extended</inlineHelpText>
        <label>Number of Payment Deferrals</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Repayment Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Same_monthly_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same monthly payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Due__c</fullName>
        <label>Total Fees Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Interest_Due__c</fullName>
        <label>Total Interest Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PrincipalAdjustment-Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Txn_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Txn Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Txn_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Txn Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Other Loan Transaction</label>
    <nameField>
        <displayFormat>OLTID-{0000000000}</displayFormat>
        <label>Other Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Loan Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>